add: show post and category
